deleted text-align center from behindJumbo css class and add padding left.  This fixed the centering text problem on the quizzes

--- a/client/content/css.css
+++ b/client/content/css.css
@@ -17,7 +17,7 @@
 }
 
 .replaceJumbo {
-  text-align:center;
+  padding-left: 4px;
   min-height:80px;
   width:90%;
   margin:auto;
